Use `position` instead of `opacity` to fix z-index.
See https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Understanding_z_index/The_stacking_context
for a discussion of z-index stacking contexts.  Both `opacity` and
`position` can be used to create a new context.  Neither are ideal, but
I think of the available options `position: relative` is likely to have
the least side effects.

--- a/_assets/stylesheets/components/_content.scss
+++ b/_assets/stylesheets/components/_content.scss
@@ -1,11 +1,12 @@
 #content {
   border-radius: $base-border-radius;
-  // opacity must be set (below 1) to fix oddity in z-index spec
-  opacity: .99; 
   overflow:hidden;
   padding:rem(30) 0 0 0;
+  position: relative; // Force a new z-index stacking context
   z-index: 100;
+
   .chat { @include banner('patterns/hex.svg') }
+
   .section-info {
     margin:0 auto;
     width: 61%;
